[gd_scene load_steps=4 format=3 uid="uid://bqxv8k5j5x5x5"]

[ext_resource type="Script" path="res://scripts/GameScene.gd" id="1_0x5x5"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="3_0x5x5"]
[ext_resource type="Script" path="res://scripts/MobileUI.gd" id="4_0x5x5"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0x5x5")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("3_0x5x5")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4_0x5x5")

[node name="TopPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="LevelLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
text = "Level: 1"
horizontal_alignment = 1

[node name="MovesLabel" type="Label" parent="UI/TopPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -25.0
offset_right = -50.0
offset_bottom = 25.0
text = "Moves: 0"
horizontal_alignment = 1

[node name="LevelCompletePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
color = Color(0.1, 0.1, 0.1, 0.9)
visible = false

[node name="LevelCompleteLabel" type="Label" parent="UI/LevelCompletePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = -20.0
text = "Level Complete!"
horizontal_alignment = 1

[node name="NextLevelButton" type="Button" parent="UI/LevelCompletePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 10.0
offset_right = 75.0
offset_bottom = 50.0
text = "Next Level"

[connection signal="pressed" from="NextLevelButton" to="UI" method="_on_next_level_pressed"]

[node name="GameCompletePanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
color = Color(0.1, 0.1, 0.1, 0.9)
visible = false

[node name="GameCompleteLabel" type="Label" parent="UI/GameCompletePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -50.0
text = "Congratulations!"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameCompletePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -10.0
text = "You completed all levels!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameCompletePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
text = "Restart"

[connection signal="pressed" from="RestartButton" to="UI" method="_on_restart_pressed"]

[node name="MainMenuButton" type="Button" parent="UI/GameCompletePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 120.0
text = "Main Menu"

[connection signal="pressed" from="MainMenuButton" to="UI" method="_on_main_menu_pressed"]

[node name="TouchControls" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TouchArea" type="ColorRect" parent="UI/TouchControls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0.01)

[node name="DirectionHint" type="Label" parent="UI/TouchControls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -25.0
offset_right = 200.0
offset_bottom = 25.0
text = "Touch to move"
horizontal_alignment = 1
